--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,19 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>1.6.1</version>
+				<configuration>
+					<to>
+						<image>192.168.0.51:5043/gnu/deploy-test</image>
+					</to>
+					<container>
+						<ports>9099:9099</ports>
+					</container>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
